--- a/CSS/style.css
+++ b/CSS/style.css
@@ -747,10 +747,9 @@ i.fa-solid.fa-location-dot.fa-lg {
         }
     }
 
+    /* sur les ecrans de 375px jusqu'à 768px (mobile)*/
 
-    /* sur les ecrans de 767px ou moins (mobile)*/
-
-    @media screen and (max-width: 767px) {
+    @media screen and ((min-width: 320px) and (max-width:768px)) {
         * {
             margin: 0;
             padding: 0;
@@ -767,7 +766,7 @@ i.fa-solid.fa-location-dot.fa-lg {
         }
 
         #menuL{
-            justify-content: space-between;	
+            justify-content: space-around;	
         }
 
         #menu .Booki {
@@ -923,7 +922,7 @@ i.fa-solid.fa-location-dot.fa-lg {
         }
 
         .Img-hebergement {
-            width: 97%;
+            width: 99%;
         }
 
         .card-container {
