--- a/CSS/style.css
+++ b/CSS/style.css
@@ -747,9 +747,9 @@ i.fa-solid.fa-location-dot.fa-lg {
         }
     }
 
-    /* sur les ecrans de 375px jusqu'à 768px (mobile)*/
+    /* sur les ecrans de 768px  ou moins(mobile)*/
 
-    @media screen and ((min-width: 320px) and (max-width:768px)) {
+    @media screen and (max-width:768px) {
         * {
             margin: 0;
             padding: 0;
